test_src/compiler_errors/literals/LongTooLargeError5.b
class LongTooLargeError5 {
    void test() {
        println(-12345678901234567890L);
    }
}
